# kaggle-environments

./: .gitignore  .mcp.json  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .project  .stylelintrc.js  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MANIFEST.in  README.md  VISUALIZER_README.md  agent0.json  agent1.json  agents.md  eslint.config.mjs  game_replay.html  lefthook.yml  levels.py  main.py  out  package-lock.json  package.json  package.sh  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.sh  requirements.txt  ruff.toml  run_tests.sh  session-info.json  setup.py  state.json  submit.py  test.py  (+2 more)
.agents/skills/create-environment/: SKILL.md
.agents/skills/create-harness/: SKILL.md
.agents/skills/create-open-spiel-visualizer/: SKILL.md
.agents/skills/create-playable-visualizer/: SKILL.md
.agents/skills/create-visualizer/: SKILL.md  visualizer-style-guide.md
.agents/skills/onboard-open-spiel-game/: SKILL.md
.agents/skills/review-harness/: SKILL.md
.agents/skills/run-ablation/: SKILL.md
.claude/skills/create-environment/: SKILL.md
.claude/skills/create-harness/: SKILL.md
.claude/skills/create-playable-visualizer/: SKILL.md
.claude/skills/create-visualizer/: SKILL.md
.claude/skills/onboard-open-spiel-game/: SKILL.md
.claude/skills/review-harness/: SKILL.md
.claude/skills/run-ablation/: SKILL.md
.github/workflows/: chess-v2-visualizer.yml  go-v2-visualizer.yml  pythonpackage.yml
.kagent/reviewers/: review-harness-reviewer.md  reviewers.yaml
assets/: stickman.fbx
cicd/: cloudbuild-branch-visualizer.yaml  cloudbuild-visualizer.yaml  cloudbuild.yaml  cloudbuild_pr.yaml  cloudbuild_pr_backend.yaml  cloudbuild_pr_frontend.yaml  cloudbuild_visualizers_only.yaml
deprecated_envs/: README.md
deprecated_envs/chess/: chess.js
deprecated_envs/deprecated/lux_ai_s2/: test_lux.py
deprecated_envs/identity/: identity.json  identity.py
deprecated_envs/llm_20_questions/: llm_20_questions.js  llm_20_questions.py  test_llm_20_questions.py
deprecated_envs/lux_ai_s2/: README.md  agents.py  lux_ai_s2.py  test_lux.py
deprecated_envs/lux_ai_s2/luxai_s2/: actions.py  factory.py  globals.py  unit.py  version.py
deprecated_envs/tictactoe/: test_tictactoe.py  tictactoe.ipynb  tictactoe.js  tictactoe.py
docker/: Dockerfile  README.md  bash.sh  bashsc.sh  build.sh  build_cpu.sh  build_gpu.sh  cicd-publish-to-pypi.sh  cloudbuild.yaml  cpu.Dockerfile  gpu.Dockerfile  open_spiel.Dockerfile  run.sh  runsc.sh  test.sh
docker/cloud-run-source/: Procfile  README.md  main.py  requirements.txt
experiment/debug_small/: werewolf_game.html  werewolf_game.json
experiment/debug_small_20251003_231239/: werewolf_game.json
experiment/scripts/: blender_merge_fbx.py  check_fbx_content.py  merge_fbx_animations.py  test_fbx_animations.py
experiment/static/volumetric_fire/: .gitignore  package.json
kaggle_environments/: __init__.py  ablation.py  ablation_analysis.py  agent.py  api.py  configuration.py  core.py  core_harness.py  errors.py  helpers.py  local_harness_runner.py  main.py  proto_agent.py  proto_relay.py  schema.json  schemas.json  trace.out  utils.py
kaggle_environments/envs/: helpers.py
kaggle_environments/static/: player.html
notebooks/: repeated_8player_blocked_unique.ipynb  repeated_dump.ipynb
scripts/: dump_audio.py  dump_game.py  dump_llm_game.py  dump_weak_llm.py  inspect_repeated_poker.mjs  preview_orbit_wars_starts.py  repeated_dump.py  tournament_dump.py
scripts/video-recorder/: Dockerfile  README.md  login.js  package-lock.json  package.json  record.sh  speed_up_video.sh
tests/: conftest.py  core_harness_test.py  local_harness_runner_test.py  replay_error_test.py  utils_test.py  word_association_harness_test.py
tests/integration/: README.md  __init__.py  docker-compose.yml  run_tests.sh  run_tests_in_docker.sh  test_envs.py  test_multicontainer.py  test_proto_utils.py  test_shimmy_games.py
web/: tsconfig.base.json  vite.config.base.ts
web/common/: package.json  tsconfig.json  vite.config.ts
web/config/: branch-owned.json  default-visualizers.json
web/core/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
web/scripts/: collect-artifacts.sh  deploy-branch-visualizers.py  dev-with-replay.js  find-games.js  merge-game-indexes.py  plan-branch-deploy.js  publish-core.sh  sync-version.js  test_merge_game_indexes.py  validate-manifest.js  validate-visualizer-conventions.js
(+1757 files in other folders)
